--- a/static/home.html
+++ b/static/home.html
@@ -79,13 +79,13 @@
         </section>
 
         <section>
-            <h2>LEARN WITH ME </h2>
+            <h2>Courses Offered</h2>
             <p>Please look at the <a href="courses">courses</a> section.</p>  
         </section>
     </main>
 
     <footer>
-        <p>&copy; Lakshmi</p>
+        <p>&copy; Abhishek.Veeramalla</p>
     </footer>
 </body>
 </html>
