--- a/static/about.html
+++ b/static/about.html
@@ -72,7 +72,7 @@
         </main>
 
         <footer>
-            <p>&copy; Abhishek.Veeramalla</p>
+            <p>&copy; LAKSHMI TV </p>
         </footer>
     </body>
 </html>
