--- a/static/home.html
+++ b/static/home.html
@@ -13,12 +13,11 @@
         }
 
         header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-
+    background-color: #007BFF; /* Bootstrap blue */
+    color: #ffffff;
+    padding: 10px 0;
+    text-align: center;
+}
         nav ul {
             list-style-type: none;
             padding: 0;
@@ -42,15 +41,15 @@
             margin-bottom: 20px;
         }
 
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
+       footer {
+    background-color: #333; /* dark gray */
+    color: #fff;            /* white text */
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
     </style>    
 </head>
 <body>
@@ -85,7 +84,7 @@
     </main>
 
     <footer>
-        <p>&copy; Abhishek.Veeramalla</p>
+        <p>&copy; Lakshmi TV</p>
     </footer>
 </body>
 </html>
