--- a/static/home.html
+++ b/static/home.html
@@ -66,19 +66,18 @@
 
     <main>
         <section>
-            <h1>Learn DevOps from Basics</h1>
-            <p>The main purpose of this website is to guide people on how to learn DevOps 
-                from basics for Free. We will provide you with the best resources to learn.
+            <h1>come guys learn with me </h1>
+            <p>lets start learning devops form scratch.
             </p>
         </section>
 
         <section>
             <h2>Overview</h2>
-            <p> Zero to Hero courses on all DevOps tools and popular Cloud(AWS and Azure) platform</p>
+            <p> learn aws devops with me</p>
         </section>
 
         <section>
-            <h2>Courses Offered</h2>
+            <h2>Courses </h2>
             <p>Please look at the <a href="courses">courses</a> section.</p>  
         </section>
     </main>
