--- a/static/courses.html
+++ b/static/courses.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Learn DevOps from Basics</title>
+        <title>Learn with me </title>
         <style>
             body {
                 margin: 0;
@@ -10,11 +10,11 @@
             }
 
             header {
-                background-color: #333;
-                color: #fff;
-                padding: 10px 0;
-                text-align: center;
-            }
+    background-color: #007BFF; /* Bootstrap blue */
+    color: #ffffff;
+    padding: 10px 0;
+    text-align: center;
+}
 
             nav ul {
                 list-style-type: none;
@@ -40,14 +40,14 @@
             }
 
             footer {
-                background-color: #333;
-                color: #fff;
-                text-align: center;
-                padding: 10px 0;
-                position: fixed;
-                bottom: 0;
-                width: 100%;
-            }
+    background-color: #333; /* dark gray */
+    color: #fff;            /* white text */
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
         </style>
     </head>
     <body>
@@ -64,29 +64,20 @@
 
         <main>
             <section>
-                <h1>Learn DevOps from Basics</h1>
+                <h1>Learn DevOps with me </h1>
                 <p>DevOps is a set of practices that combines software development (Dev) and IT operations (Ops)</p>
                 <p>It aims to shorten the systems development life cycle and provide continuous delivery with high software quality. DevOps is complementary with Agile software development; several DevOps aspects came from Agile methodology</p>    
 
                 <h2>Main Tutorials</h2>
-                <p><a href="https://www.youtube.com/playlist?list=PLdpzxOOAlwvIKMhk8WhzN1pYoJ1YU8Csa">DevOps Zero to Hero</a></p>
-                <p><a href="https://www.youtube.com/playlist?list=PLdpzxOOAlwvLNOxX0RfndiYSt1Le9azze">AWS Zero to Hero</a></p>
-                <p><a href="https://www.youtube.com/playlist?list=PLdpzxOOAlwvIcxgCUyBHVOcWs0Krjx9xR">Azure Zero to Hero</a></p>
-                <p><a href="https://www.youtube.com/playlist?list=PLdpzxOOAlwvI0O4PeKVV1-yJoX2AqIWuf">Terraform Zero to Hero</a></p>
-                <p><a href="https://www.youtube.com/playlist?list=PLdpzxOOAlwvKwTyYNJCUwGPvql0TrsPgv">Python Zero to Hero</a></p>
-
-                <h2>Additional Tutorials</h2>
-                <p><a href="https://www.youtube.com/playlist?list=PLdpzxOOAlwvKv4MFW35XRskZbQbrt6ep-">Networking Fundamentals</a></p>
-                <p><a href="https://www.youtube.com/playlist?list=PLdpzxOOAlwvLxd5nmtmORCmhD5jkrNbuE">Ansible Zero to Hero</a></p>
-                <p><a href="https://www.youtube.com/playlist?list=PLdpzxOOAlwvKu7OZpgj1-MzJFqZ8RBp6f">GitOps Zero to Hero</a></p>
-
-                <h2>Troubleshooting Tutorials</h2>
-                <p><a href="https://www.youtube.com/playlist?list=PLdpzxOOAlwvIrFBI1farpLS_OSUBXJMLX">Troubleshooting Kubernetes</a></p>
+                <p><a href="https://docs.aws.amazon.com/">aws Documentaion</a></p>
+                
+                <h2> connect Linkedin</h2>
+                <p><a href="https://www.linkedin.com/in/lakshmi-tv-5b13842b7/">connect with me</a></p>
             </section>
         </main>
 
         <footer>
-            <p>&copy; Abhishek.Veeramalla</p>
+            <p>&copy; LAKSHMI TV </p>
         </footer>
     </body>
 </html>
