--- a/static/contact.html
+++ b/static/contact.html
@@ -9,11 +9,11 @@
             }
 
             header {
-                background-color: #333;
-                color: #fff;
-                padding: 10px 0;
-                text-align: center;
-            }
+    background-color: #007BFF;
+    color: #ffffff;
+    padding: 10px 0;
+    text-align: center;
+}
 
             nav ul {
                 list-style-type: none;
@@ -39,14 +39,14 @@
             }
 
             footer {
-                background-color: #333;
-                color: #fff;
-                text-align: center;
-                padding: 10px 0;
-                position: fixed;
-                bottom: 0;
-                width: 100%;
-            }
+    background-color: #007BFF;
+    color: #ffffff;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
         </style>
     </head>
     <body>
@@ -64,5 +64,5 @@
         <main>
             <section>
                 <h1>Contact Us</h1>
-                <p>For any doubts while learning, Join our Members only exclusive slack channel</p>
-                <a href="https://www.youtube.com/abhishekVeeramalla/join">Join Slack</a>
+                <p>For any doubts connect linkedin</p>
+                <a href="https://www.linkedin.com/in/lakshmi-tv-5b13842b7//connect">connect likedin</a>
