--- a/static/home.html
+++ b/static/home.html
@@ -12,8 +12,8 @@
             padding: 0;
         }
 
-        header {
-    background-color: #007BFF; /* Bootstrap blue */
+       header {
+    background-color: #007BFF;
     color: #ffffff;
     padding: 10px 0;
     text-align: center;
@@ -41,9 +41,9 @@
             margin-bottom: 20px;
         }
 
-       footer {
-    background-color: #333; /* dark gray */
-    color: #fff;            /* white text */
+      footer {
+    background-color: #007BFF;
+    color: #ffffff;
     text-align: center;
     padding: 10px 0;
     position: fixed;
