--- a/static/about.html
+++ b/static/about.html
@@ -9,12 +9,11 @@
             }
 
             header {
-                background-color: #333;
-                color: #fff;
-                padding: 10px 0;
-                text-align: center;
-            }
-
+    background-color: #007BFF;
+    color: #ffffff;
+    padding: 10px 0;
+    text-align: center;
+}
             nav ul {
                 list-style-type: none;
                 padding: 0;
@@ -39,14 +38,14 @@
             }
 
             footer {
-                background-color: #333;
-                color: #fff;
-                text-align: center;
-                padding: 10px 0;
-                position: fixed;
-                bottom: 0;
-                width: 100%;
-            }
+    background-color: #007BFF;
+    color: #ffffff;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
         </style>
     </head>
     <body>
